<resources>
    <string name="app_name">neutriNote CE</string>
    <string name="browser_widget_name">neutriNote Browser</string>
    <string name="add_note_widget_name">neutriNote: New Note</string>
    <string name="backup_service_name">neutriNote Backup Service</string>
    <string name="in_app_search">neutriNote &#128269;</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intro_getting_started">Getting Started</string>
    <string name="intro_getting_started_desc">Before first use, take a moment to set up Local Repository for neutriNote.</string>
    <string name="intro_local_repo">Local Storage</string>
    <string name="intro_local_repo_desc">Local Repository is the component for storing your notes on device.  Follow the guide in the next screen to assign a folder to the repository.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_header_default">neutriNote</string>
    <string name="drawer_menu_custom_filters">Custom Filters</string>
    <string name="drawer_menu_modified_after">Modified since...</string>
    <string name="drawer_menu_accessed_recently">Accessed since...</string>
    <string name="drawer_menu_modified_nearby">Modified Nearby</string>
    <string name="drawer_menu_metadata">Metadata</string>
    <string name="drawer_menu_account_short">Account</string>
    <string name="drawer_menu_account_long">Your account</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_help">Help</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_backup_app_data">Backup App Data</string>
    <string name="drawer_menu_restore_app_data">Restore App Data</string>
    <string name="menu_add">Add New</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_style">Style</string>
    <string name="menu_search">Search</string>
    <string name="menu_advanced_search">Advanced Search</string>
    <string name="menu_clear_search_history">Clear Search History</string>
    <string name="menu_clear_location_data">Clear Location Data</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_metadata">Metadata</string>
    <string name="menu_show_map">Show in Map</string>
    <string name="menu_append_clipboard">Append Clipboard</string>
    <string name="menu_import_files">Import Files</string>
    <string name="menu_export_files">Export Files</string>
    <string name="menu_mirror_files">Mirror Files</string>
    <string name="menu_sort_by_title">Sort by Title</string>
    <string name="menu_sort_by_date">Sort by Date</string>
    <string name="menu_toggle_title">Toggle Title</string>
    <string name="menu_markdown_view">Markdown View</string>
    <string name="menu_paste_calendar">Paste to Calendar</string>
    <string name="menu_full_screen">Full Screen</string>
    <string name="menu_clear_cache">Clear Cache</string>
    <string name="menu_export">Export</string>
    <string name="menu_print">Print</string>
    <string name="menu_encrypt_decrypt">Encode/Decode</string>
    <string name="menu_save_exit">Save and Exit</string>
    <string name="menu_save">Save</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_share">Share</string>
    <string name="menu_mirror_pull">Pull From Mirror</string>
    <string name="menu_edit_tools">Toolbox</string>
    <string name="menu_markdown_symbols">Markdown Symbols</string>
    <string name="menu_style_font_family">Typeface</string>
    <string name="menu_style_font_size">Font Size</string>
    <string name="menu_style_margin">Margin</string>
    <string name="menu_style_theme">Theme</string>
    <string name="label_title">Title</string>
    <string name="label_content">Content</string>
    <string name="label_share">Share To</string>
    <string name="status_manager_created">Manager created</string>
    <string name="status_initializing">Initializing...</string>
    <string name="status_opening">Opening\u0020</string>
    <string name="status_rescanning">Rescanning...</string>
    <string name="status_searching">Searching...</string>
    <string name="status_sync_completed">Sync completed</string>
    <string name="status_import_completed">Import completed</string>
    <string name="status_synchronized">Synchronized</string>
    <string name="status_canceled">Canceled</string>
    <string name="status_app_data_restoring">Restoring app data.  Please wait...</string>
    <string name="status_app_data_restored">App data restored.  Please restart app.</string>
    <string name="status_app_data_backing_up">Backing up app data.  Please wait...</string>
    <string name="status_app_data_backup">App data backup finished.</string>
    <string name="status_system_busy">System is busy.</string>
    <string name="status_no_data">No data.</string>
    <string name="status_no_ocr_data">No OCR data.  Hint: keep text centered in view.</string>
    <string name="status_no_location_data">No location data.</string>
    <string name="status_no_status">No status.</string>
    <string name="status_no_change">No change.</string>
    <string name="status_no_note">No note found.\u0020≧(◕_◕)≦</string>
    <string name="status_empty">¯\\_(ツ)_/¯\u000ANo data.\u0020<font color="#00FF00">\u21BB</font></string>
    <string name="status_more_items">and more...</string>
    <string name="status_imported_count">\u0020item(s) imported from\u0020</string>
    <string name="status_count">\u0020item(s)\u0020</string>
    <string name="status_word_count">\u0020word(s)</string>
    <string name="status_modified_after">Modified after\u0020</string>
    <string name="status_accessed_after">Accessed after\u0020</string>
    <string name="status_modified_nearby">Modified nearby\u0020</string>
    <string name="status_hit_count">count:\u0020</string>
    <string name="status_hit_in_title">in the title</string>
    <string name="status_no_hit_found">not found</string>
    <string name="status_no_search_conducted">No search conducted</string>
    <string name="status_no_go_back">Cannot go back any further</string>
    <string name="status_no_go_forward">Cannot go forward any further</string>
    <string name="status_all_replaced">All replaced.</string>
    <string name="status_deleted_remotely">\u0020deleted.</string>
    <string name="status_added_remotely">\u0020added.</string>
    <string name="status_updated_remotely">\u0020updated.</string>
    <string name="status_locked">\u0020🔒</string>
    <string name="status_items_deleted">\u0020item(s) deleted.</string>
    <string name="status_items_updated">\u0020item(s) updated.</string>
    <string name="status_exported">Exported to\u0020</string>
    <string name="status_back_to">Back to\u0020</string>
    <string name="status_changes_left">\u0020change(s) left</string>
    <string name="status_encrypted">Encoding completed.</string>
    <string name="status_decrypted">Decoding completed.</string>
    <string name="status_encrypting">Encoding in progress...</string>
    <string name="status_decrypting">Decoding in progress...</string>
    <string name="status_encrypting_detailed">Encoding in progress, please wait...</string>
    <string name="status_decrypting_detailed">Decoding in progress, please wait...</string>
    <string name="status_reverted">\u0020reverted.</string>
    <string name="status_notes_exported">\u0020notes exported.</string>
    <string name="status_auto_backup">Automatic backup</string>
    <string name="status_auto_backup_in_progress">Backup in progress now</string>
    <string name="status_auto_backup_completed">Backup completed at</string>
    <string name="admin_pref">Administration</string>
    <string name="pref_local_repo_path_title">Local Repository Path</string>
    <string name="pref_local_repo_path_summary">Specify local repository path.  Do not modify the repo directly (see User Guide).  Note: Hidden from other apps in Android 11+.</string>
    <string name="pref_incremental_backup_title">Auto Backup / Mirror</string>
    <string name="pref_incremental_backup_summary">Specify backup / mirror storage.  Backup will run daily during idle hours.  Mirror may be used for sync (see User Guide).  Note: Visible to other apps in Android 11+.</string>
    <string name="pref_auto_save_title">Auto Save</string>
    <string name="pref_auto_save_summary">Enable auto save.</string>
    <string name="pref_location_aware_title">Location Awareness</string>
    <string name="pref_location_aware_summary">Store note locations.</string>
    <string name="ui_pref">User Interface</string>
    <string name="pref_custom_filter_title">Custom Filters</string>
    <string name="pref_custom_filter_summary">Specify filters separated by semicolons.  neutriNote will launch with the first filter.</string>
    <string name="pref_custom_filter_default">all;starred;A;B;C;D;E;F;G;H;I;J;K;L;M;N;O;P;Q;R;S;T;U;V;W;X;Y;Z</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Specify a theme.</string>
    <string name="pref_theme_default">system</string>
    <string name="pref_lux_title">Ambient Glow (Experimental)</string>
    <string name="pref_lux_summary">Adapt color temperature to ambient light (colors in Markdown unaffected).</string>
    <string name="advanced_pref">Advanced</string>
    <string name="pref_lazy_update_title">Lazy Update</string>
    <string name="pref_lazy_update_summary">Merge changes before commits to conserve battery.</string>
    <string name="pref_math_url_title">Mathematics</string>
    <string name="pref_math_url_summary">Use your own parser by providing server\u0027s url (HTTPS).  Leave blank to use MathJax (default).</string>
    <string name="pref_math_url_default">https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js</string>
    <string name="pref_copy_attachments_to_repo_title">Add Images</string>
    <string name="pref_copy_attachments_to_repo_summary">Always add inserted images to local repository.</string>
    <string name="pref_show_hidden_title">Show Hidden</string>
    <string name="pref_show_hidden_summary">Show hidden notes (any note with \u223c as prefix in its title).</string>
    <string name="support_pref">Support</string>
    <string name="pref_support_title">Having a problem?</string>
    <string name="pref_support_summary">Contact the developer.</string>
    <string name="support_email_subject">neutriNote Bug Report</string>
    <string name="support_email_body">Details of the problem:</string>
    <string name="pref_play_store_link_title">Recommend neutriNote</string>
    <string name="pref_play_store_link_summary">Share with those who might find the app useful.</string>
    <string name="pref_play_store_link_url">https://f-droid.org/packages/com.appmindlab.nano/</string>
    <string name="pref_product_news_link_title">Product News</string>
    <string name="pref_product_news_link_summary">Announcements and updates.</string>
    <string name="hint_search">Search for...</string>
    <string name="hint_replace">Replace with...</string>
    <string name="button_close">\uF057</string>
    <string name="button_close_description">Close</string>
    <string name="button_search">\uF002</string>
    <string name="button_search_description">Search</string>
    <string name="button_replace">\uF074</string>
    <string name="button_replace_description">Replace</string>
    <string name="button_next">\uF063</string>
    <string name="button_next_description">Find Next</string>
    <string name="button_clear">\uF1F8</string>
    <string name="button_clear_description">Clear</string>
    <string name="button_gallery">\uF87C</string>
    <string name="button_gallery_description">Gallery</string>
    <string name="button_camera">\uF083</string>
    <string name="button_camera_description">Camera</string>
</resources>