<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete_vector"
        yourapp:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/menu_metadata"
        android:title="@string/menu_metadata"
        android:icon="@drawable/ic_label_vector"
        yourapp:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/menu_show_map"
        android:title="@string/menu_show_map"
        android:icon="@drawable/ic_map_vector"
        yourapp:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/menu_append_clipboard"
        android:title="@string/menu_append_clipboard"
        android:icon="@drawable/ic_content_paste_vector"
        yourapp:showAsAction="ifRoom|collapseActionView" />
</menu>